# meh

./: .gitignore  Cargo.toml  notify.sh  readme.md
crates/meh-cli/: Cargo.toml
crates/meh-cli/src/: main.rs  watch.rs
doc/: index.html
doc/debug/.fingerprint/autocfg-29659a0dcc79de19/: lib-autocfg.json
doc/debug/.fingerprint/chrono-d65a159b2d50d239/: lib-chrono  lib-chrono.json
doc/debug/.fingerprint/itoa-5abdbe04af287709/: lib-itoa
doc/debug/.fingerprint/libc-67e456bea38261d9/: lib-libc.json
doc/debug/.fingerprint/libc-81743924ef3ccd48/: build-script-build-script-build.json
doc/debug/.fingerprint/log-b039d8ea6a157e89/: build-script-build-script-build  build-script-build-script-build.json
doc/debug/.fingerprint/log-bb9429b1d2febe21/: run-build-script-build-script-build.json
doc/debug/.fingerprint/num-integer-6558cc38a79ccac0/: run-build-script-build-script-build.json
doc/debug/.fingerprint/num-integer-bb38be244d08347d/: lib-num-integer  lib-num-integer.json
doc/debug/.fingerprint/num-traits-787741d8c96267b7/: lib-num-traits.json
doc/debug/.fingerprint/num-traits-7fec5e3d76e8ab05/: run-build-script-build-script-build
doc/debug/.fingerprint/num-traits-9ad06ed6f2b66ba3/: build-script-build-script-build
doc/debug/.fingerprint/proc-macro2-644001b76c8a58d2/: build-script-build-script-build.json
doc/debug/.fingerprint/proc-macro2-894b5dfa42c213c5/: lib-proc-macro2
doc/debug/.fingerprint/proc-macro2-ea7a6abdd90b9cad/: run-build-script-build-script-build  run-build-script-build-script-build.json
doc/debug/.fingerprint/quote-9bd0a1cd5a36109c/: lib-quote
doc/debug/.fingerprint/ryu-420ee1d91815dcdb/: run-build-script-build-script-build.json
doc/debug/.fingerprint/ryu-b7e68a7ce13ed2b4/: build-script-build-script-build  build-script-build-script-build.json
doc/debug/.fingerprint/ryu-f81e4b3460ffc9b2/: lib-ryu.json
doc/doc/: settings.html  source-files.js
docs/: .rustc_info.json  index.html
docs/doc/: search-index.js
docs/doc/meh/: all.html  fn.construct_url.html  index.html  sidebar-items.js  struct.Deal.html  struct.Poll.html  struct.Response.html  struct.Topic.html  struct.Video.html
docs/doc/meh/deal/: struct.Deal.html
src/: deal.rs  lib.rs  main.rs  poll.rs  video.rs
(+59 files in other folders)
