[package]
name = "meh"
version = "0.2.0"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
reqwest = { version = "0.10", features = ["json", "blocking", "rustls-tls"], default-features = false, optional = true }
indicatif = { version = "0.13", optional = true }
clap = { version = "2", optional = true }
pretty_env_logger = { version = "0.3", optional = true }
lazy_static = { version = "1", optional = true }

[features]
default = []
bin = ["reqwest", "indicatif", "clap", "pretty_env_logger", "lazy_static"]
