[package]
name = "meh"
version = "0.2.0"
authors = ["Robert Masen <r.f.masen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
serde = { version = "1", features = ["derive"] }
log = "0.4"

[workspace]
members = ["crates/*"]
