[package]
name = "meh-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = [ "derive" ] }
indicatif = { version = "0.17" }
lazy_static = { version = "1" }
meh = { path = "../../" }
pretty_env_logger = { version = "0.5"  }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde_json = { version = "1" }
tokio = { version = "1", features = ["full"] }
